# todomvc-013

./: .gcloudignore  .gitignore  .plan  Cargo.toml  Dockerfile  README.md
migrations/: 20240101000000_create_todos.sql
src/: app.rs  db.rs  lib.rs  main.rs  model.rs  server_fns.rs
src/components/: footer.rs  mod.rs  todo_input.rs  todo_item.rs  todo_list.rs
style/: main.css
tests/: integration_test.rs
